wesl_bindgen/src/quote_gen/snapshots/include_relative_root_but_dont_generate_it.snap
---
source: wesl_bindgen/src/quote_gen/rust_module_builder.rs
---
pub mod a {
	use super::{_root, _root::*};
	struct B {
		a: a::b::A,
	}
	pub mod b {
		use super::{_root, _root::*};
		struct A;
	}
}
