wesl_bindgen/src/quote_gen/snapshots/merge.snap
---
source: wesl_bindgen/src/quote_gen/rust_module_builder.rs
---
pub mod a {
	pub mod b {
		pub mod c {
			struct A;
			struct C;
		}
		pub mod d {
			struct B;
		}
		pub mod e {
			struct D;
		}
	}
}
