wesl_bindgen/src/quote_gen/snapshots/module_add_duplicates.snap
---
source: wesl_bindgen/src/quote_gen/rust_module_builder.rs
---
pub mod a {
	struct B;
	pub mod b {
		struct A;
	}
}
