wesl_bindgen/src/quote_gen/snapshots/module_generation_works.snap
---
source: wesl_bindgen/src/quote_gen/rust_module_builder.rs
---
pub mod a {
	pub mod b {
		pub mod c {
			struct B;
			struct C;
			pub mod d {
				struct A;
			}
		}
	}
}
