wesl_bindgen/src/quote_gen/snapshots/relative_root_feature.snap
---
source: wesl_bindgen/src/quote_gen/rust_module_builder.rs
---
mod _root {
	pub use super::*;
}
pub mod a {
	use super::{_root, _root::*};
	struct B {
		a: a::b::A,
	}
	pub mod b {
		use super::{_root, _root::*};
		struct A;
	}
}
